--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -1,14 +1,15 @@
-name: CI
+name: frostgate-core-ci
 
 on:
   push:
-    branches: [ main ]
+    branches: [ "main" ]
   pull_request:
-    branches: [ main ]
+    branches: [ "main" ]
 
 jobs:
   build-test:
     runs-on: ubuntu-latest
+
     steps:
       - name: Checkout
         uses: actions/checkout@v4
@@ -16,20 +17,23 @@ jobs:
       - name: Set up Python
         uses: actions/setup-python@v5
         with:
-          python-version: "3.11"
+          python-version: "3.12"
 
-      - name: Install deps
+      - name: Install Python dependencies
         run: |
           python -m pip install --upgrade pip
           pip install -r requirements.txt
 
-      - name: Lint & basic import test
+      - name: Run pytest
         run: |
-          python -m compileall api
+          pytest -q
 
-      - name: Build API image
-        uses: docker/build-push-action@v6
+      - name: Set up Go
+        uses: actions/setup-go@v5
         with:
-          context: .
-          push: false
-          tags: frostgatecore-api:test
+          go-version: "1.22"
+
+      - name: Build supervisor-sidecar
+        run: |
+          cd supervisor-sidecar
+          go build ./...
