Fix auth_enabled determinism under pytest; stabilize main app init

--- a/pytest.ini
+++ b/pytest.ini
@@ -1,7 +1,11 @@
 [pytest]
-addopts = -p no:cacheprovider
+addopts = -p no:cacheprovider -m "not integration"
 markers =
     smoke: quick smoke tests
+    integration: tests that require a running API at BASE_URL
+    e2e: end-to-end flows (seed scripts, etc.)
 asyncio_default_fixture_loop_scope = function
 pythonpath = .
-
+env =
+    FG_SQLITE_PATH=state/frostgate.db
+    FG_API_KEY=demo_key_change_me
