--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -2,38 +2,273 @@ name: frostgate-core-ci
 
 on:
   push:
-    branches: [ "main" ]
+    branches: ["main"]
   pull_request:
-    branches: [ "main" ]
+    branches: ["main"]
+
+concurrency:
+  group: frostgate-core-ci-${{ github.ref }}
+  cancel-in-progress: true
 
 jobs:
-  build-test:
+  unit:
+    name: Unit + Build (make ci)
     runs-on: ubuntu-latest
-
     env:
       FG_ENV: dev
-      FG_ENFORCEMENT_MODE: enforce
+      FG_AUTH_ENABLED: "1"
       FG_API_KEY: supersecret
+      FG_ENFORCEMENT_MODE: observe
+      FG_SQLITE_PATH: state/frostgate-ci.db
 
     steps:
       - name: Checkout
         uses: actions/checkout@v4
 
+      - name: Install OS deps
+        run: |
+          sudo apt-get update
+          sudo apt-get install -y ripgrep sqlite3 curl zip minisign
+
       - name: Set up Python
         uses: actions/setup-python@v5
         with:
           python-version: "3.12"
-
-      - name: Install Python dependencies
-        run: |
-          python -m pip install --upgrade pip
-          pip install -r requirements.txt -r requirements-dev.txt
+          cache: "pip"
+          cache-dependency-path: |
+            requirements.txt
+            requirements-dev.txt
 
       - name: Set up Go
         uses: actions/setup-go@v5
         with:
           go-version: "1.22"
+          cache: true
 
-      - name: Run CI pipeline (make ci)
+      - name: Prepare workspace
+        run: |
+          mkdir -p state artifacts
+
+      - name: Install Python deps
+        run: |
+          python -m pip install --upgrade pip
+          pip install -r requirements.txt -r requirements-dev.txt
+
+      - name: Run unit + build pipeline
         run: |
           make ci
+
+      - name: Upload artifacts (always)
+        if: always()
+        uses: actions/upload-artifact@v4
+        with:
+          name: frostgate-unit-artifacts
+          path: |
+            artifacts/**
+            state/**
+          if-no-files-found: ignore
+
+  integration:
+    name: Integration (uvicorn + pytest -m integration)
+    runs-on: ubuntu-latest
+    needs: unit
+
+    env:
+      FG_ENV: dev
+      FG_AUTH_ENABLED: "1"
+      FG_API_KEY: supersecret
+      FG_ENFORCEMENT_MODE: observe
+      FG_SQLITE_PATH: state/frostgate-ci-integration.db
+      HOST: 127.0.0.1
+      PORT: 8001
+      BASE_URL: http://127.0.0.1:8001
+
+    steps:
+      - name: Checkout
+        uses: actions/checkout@v4
+
+      - name: Install OS deps
+        run: |
+          sudo apt-get update
+          sudo apt-get install -y ripgrep sqlite3 curl zip minisign
+
+      - name: Set up Python
+        uses: actions/setup-python@v5
+        with:
+          python-version: "3.12"
+          cache: "pip"
+          cache-dependency-path: |
+            requirements.txt
+            requirements-dev.txt
+
+      - name: Prepare workspace
+        run: |
+          mkdir -p state artifacts
+
+      - name: Install Python deps
+        run: |
+          python -m pip install --upgrade pip
+          pip install -r requirements.txt -r requirements-dev.txt
+
+      - name: Start API (uvicorn background)
+        run: |
+          nohup bash -lc '
+            set -e
+            FG_ENV="${FG_ENV}" \
+            FG_AUTH_ENABLED="${FG_AUTH_ENABLED}" \
+            FG_API_KEY="${FG_API_KEY}" \
+            FG_ENFORCEMENT_MODE="${FG_ENFORCEMENT_MODE}" \
+            FG_SQLITE_PATH="${FG_SQLITE_PATH}" \
+            uvicorn api.main:app --host "${HOST}" --port "${PORT}"
+          ' > artifacts/uvicorn.log 2>&1 &
+          echo $! > artifacts/uvicorn.pid
+
+      - name: Wait for /health
+        run: |
+          for i in {1..60}; do
+            if curl -fsS "${BASE_URL}/health" >/dev/null; then
+              echo "API is up at ${BASE_URL}"
+              exit 0
+            fi
+            sleep 0.5
+          done
+          echo "API failed to start. Logs:"
+          tail -200 artifacts/uvicorn.log || true
+          exit 1
+
+      - name: Run integration tests
+        run: |
+          make test-integration \
+            BASE_URL="${BASE_URL}" \
+            FG_API_KEY="${FG_API_KEY}" \
+            FG_SQLITE_PATH="${PWD}/${FG_SQLITE_PATH}"
+
+      - name: Stop API (always)
+        if: always()
+        run: |
+          if [ -f artifacts/uvicorn.pid ]; then
+            kill "$(cat artifacts/uvicorn.pid)" 2>/dev/null || true
+          fi
+
+      - name: Upload artifacts (always)
+        if: always()
+        uses: actions/upload-artifact@v4
+        with:
+          name: frostgate-integration-artifacts
+          path: |
+            artifacts/**
+            state/**
+          if-no-files-found: ignore
+
+  evidence:
+    name: Evidence Bundle (signed + verified)
+    runs-on: ubuntu-latest
+    needs: integration
+
+    env:
+      FG_ENV: dev
+      FG_AUTH_ENABLED: "1"
+      FG_API_KEY: supersecret
+      FG_ENFORCEMENT_MODE: observe
+      FG_SQLITE_PATH: state/frostgate-ci-evidence.db
+      HOST: 127.0.0.1
+      PORT: 8001
+      BASE_URL: http://127.0.0.1:8001
+      SCENARIO: spike
+      MINISIGN_SECRET_KEY: ${{ secrets.MINISIGN_SECRET_KEY }}
+      # Prefer committing keys/minisign.pub; otherwise use secret:
+      MINISIGN_PUBLIC_KEY: ${{ secrets.MINISIGN_PUBLIC_KEY }}
+
+    steps:
+      - name: Checkout
+        uses: actions/checkout@v4
+
+      - name: Install OS deps
+        run: |
+          sudo apt-get update
+          sudo apt-get install -y ripgrep sqlite3 curl zip minisign
+
+      - name: Set up Python
+        uses: actions/setup-python@v5
+        with:
+          python-version: "3.12"
+          cache: "pip"
+          cache-dependency-path: |
+            requirements.txt
+            requirements-dev.txt
+
+      - name: Prepare workspace
+        run: |
+          mkdir -p state artifacts keys
+
+      - name: Install Python deps
+        run: |
+          python -m pip install --upgrade pip
+          pip install -r requirements.txt -r requirements-dev.txt
+
+      - name: Start API (uvicorn background)
+        run: |
+          nohup bash -lc '
+            set -e
+            FG_ENV="${FG_ENV}" \
+            FG_AUTH_ENABLED="${FG_AUTH_ENABLED}" \
+            FG_API_KEY="${FG_API_KEY}" \
+            FG_ENFORCEMENT_MODE="${FG_ENFORCEMENT_MODE}" \
+            FG_SQLITE_PATH="${FG_SQLITE_PATH}" \
+            uvicorn api.main:app --host "${HOST}" --port "${PORT}"
+          ' > artifacts/uvicorn.log 2>&1 &
+          echo $! > artifacts/uvicorn.pid
+
+      - name: Wait for /health
+        run: |
+          for i in {1..60}; do
+            if curl -fsS "${BASE_URL}/health" >/dev/null; then
+              echo "API is up at ${BASE_URL}"
+              exit 0
+            fi
+            sleep 0.5
+          done
+          echo "API failed to start. Logs:"
+          tail -200 artifacts/uvicorn.log || true
+          exit 1
+
+      - name: Generate evidence bundle (signed)
+        run: |
+          make evidence \
+            SCENARIO="${SCENARIO}" \
+            BASE_URL="${BASE_URL}" \
+            FG_API_KEY="${FG_API_KEY}" \
+            FG_SQLITE_PATH="${PWD}/${FG_SQLITE_PATH}"
+
+      - name: Verify signature
+        run: |
+          set -euo pipefail
+          out="$(cat artifacts/latest_evidence_dir.txt)"
+          test -f "$out/manifest.sha256.minisig" || (echo "❌ missing minisig" && exit 1)
+
+          if [ -f keys/minisign.pub ]; then
+            PUB="$(cat keys/minisign.pub)"
+          else
+            test -n "${MINISIGN_PUBLIC_KEY:-}" || (echo "❌ no public key (keys/minisign.pub or MINISIGN_PUBLIC_KEY)" && exit 1)
+            PUB="${MINISIGN_PUBLIC_KEY}"
+          fi
+
+          minisign -Vm "$out/manifest.sha256" -P "$PUB"
+          echo "✅ signature verified"
+
+      - name: Stop API (always)
+        if: always()
+        run: |
+          if [ -f artifacts/uvicorn.pid ]; then
+            kill "$(cat artifacts/uvicorn.pid)" 2>/dev/null || true
+          fi
+
+      - name: Upload evidence zip
+        uses: actions/upload-artifact@v4
+        with:
+          name: frostgate-evidence-bundle
+          path: |
+            artifacts/frostgate_evidence_*.zip
+            artifacts/latest_zip*.txt
+            artifacts/latest_evidence_dir*.txt
+          if-no-files-found: error
