--- a/requirements-dev.txt
+++ b/requirements-dev.txt
@@ -1,5 +1,8 @@
-pytest==8.3.3
+pytest==8.4.2
 pytest-asyncio==0.24.0
-# httpx is already in requirements.txt, but we pin here for tests too
+pytest-env==1.2.0
+
+# httpx is already in requirements.txt, but pin for tests too
 httpx==0.27.2
 pydantic-settings==2.5.2
+requests>=2.31
