--- a/pytest.ini
+++ b/pytest.ini
@@ -1,25 +1,11 @@
 [pytest]
-# Default behavior:
-# - fast, deterministic, no external server required
-# - excludes tests that explicitly require a live API unless you opt in
-addopts = -p no:cacheprovider -m "not integration and not e2e_http"
-
+env=
+    FG_ENV=test
+testpaths =
+    tests
+    backend/tests
 markers =
-    smoke: quick smoke tests (no network, minimal setup)
-    integration: requires a running API at FG_BASE_URL/BASE_URL (external dependency)
-    e2e: end-to-end flows inside process (TestClient), may use deterministic seed
-    e2e_http: hits a live running server via real HTTP (uvicorn)
-
-# Keep asyncio behavior explicit
-asyncio_default_fixture_loop_scope = function
-
-# Make local imports deterministic (tests/, api/, backend/ etc.)
-pythonpath = .
-
-# Default env for tests.
-# These should keep tests deterministic and not depend on shell env.
-# NOTE: harness/build_app_factory should override FG_SQLITE_PATH per-test using tmp_path.
-env =
-    FG_API_KEY=supersecret
-    FG_AUTH_ENABLED=1
-    FG_DEV_EVENTS_ENABLED=1
+    smoke: quick sanity checks
+    contract: API/UI contract checks
+    e2e_http: http e2e tests
+    integration: hits real running server
