Makefile production cleanup + guardrails

--- a/pytest.ini
+++ b/pytest.ini
@@ -1,11 +1,28 @@
 [pytest]
-env=
-    FG_ENV=test
 testpaths =
     tests
     backend/tests
+norecursedirs =
+    .venv
+    artifacts
+    state
+
+# pytest-asyncio: kill the deprecation warning properly
+asyncio_default_fixture_loop_scope = function
+
+# pytest-env plugin (this is what sets FG_ENV=test for all tests)
+env =
+    FG_ENV=test
+
 markers =
     smoke: quick sanity checks
     contract: API/UI contract checks
-    e2e_http: http e2e tests
+    e2e_http: HTTP e2e tests against a running server
     integration: hits real running server
+
+# =============================================================================
+# Filter Warnings
+# =============================================================================
+filterwarnings =
+    error
+
