--- a/admin_gateway/requirements.txt
+++ b/admin_gateway/requirements.txt
@@ -4,3 +4,4 @@ uvicorn[standard]>=0.27.0,<1.0.0
 pydantic>=2.0.0,<3.0.0
 python-json-logger>=2.0.0,<3.0.0
 httpx>=0.26.0,<1.0.0
+python-jose>=3.3.0,<4.0.0
