Fix post-PT audit blockers

--- a/.env.example
+++ b/.env.example
@@ -10,7 +10,7 @@ POSTGRES_DB=frostgate
 REDIS_PASSWORD=change_me_in_production
 
 # API Keys (use FG_API_KEYS_FILE in production)
-FG_API_KEY=supersecret
+FG_API_KEY=CHANGEME
 
 # Environment
 FG_ENV=dev
