--- a/.github/workflows/release-images.yml
+++ b/.github/workflows/release-images.yml
@@ -27,17 +27,9 @@ jobs:
         with:
           python-version: "3.12"
 
-      - name: Install Python deps (runtime + dev)
+      - name: Run tests (gate release via Makefile)
         run: |
-          python -m venv .venv
-          . .venv/bin/activate
-          pip install --upgrade pip
-          pip install -r requirements.txt -r requirements-dev.txt
-
-      - name: Run tests (gate release)
-        run: |
-          . .venv/bin/activate
-          PYTHONPATH=. python -m pytest -q
+          make ci
 
       - name: Set up Go
         uses: actions/setup-go@v5
