--- a/admin_gateway/Dockerfile
+++ b/admin_gateway/Dockerfile
@@ -11,22 +11,25 @@ RUN apt-get update && apt-get install -y --no-install-recommends \
     && rm -rf /var/lib/apt/lists/*
 
 # Copy requirements first for layer caching
-COPY admin-gateway/requirements.txt ./admin-gateway/
+COPY admin_gateway/requirements.txt ./admin_gateway/
 COPY contracts/ ./contracts/
 
 # Install dependencies
-RUN pip install --no-cache-dir --prefix=/install -r admin-gateway/requirements.txt
+RUN pip install --no-cache-dir --prefix=/install -r admin_gateway/requirements.txt
 
 # Production stage
 FROM python:3.12-slim
 
 WORKDIR /app
 
+# Create non-root user
+RUN addgroup --system app && adduser --system --ingroup app app
+
 # Copy installed packages from builder
 COPY --from=builder /install /usr/local
 
 # Copy application code
-COPY admin-gateway/ ./admin_gateway/
+COPY --chown=app:app admin_gateway/ ./admin_gateway/
 COPY contracts/ ./contracts/
 
 # Set Python path
@@ -38,5 +41,7 @@ HEALTHCHECK --interval=10s --timeout=3s --start-period=5s --retries=3 \
     CMD python -c "import urllib.request; urllib.request.urlopen('http://127.0.0.1:8080/health', timeout=2)"
 
 EXPOSE 8080
+
+USER app
 
 CMD ["python", "-m", "uvicorn", "admin_gateway.main:app", "--host", "0.0.0.0", "--port", "8080"]
