--- a/admin_gateway/requirements.txt
+++ b/admin_gateway/requirements.txt
@@ -5,3 +5,4 @@ pydantic>=2.0.0,<3.0.0
 python-json-logger>=2.0.0,<3.0.0
 httpx>=0.26.0,<1.0.0
 python-jose>=3.3.0,<4.0.0
+itsdangerous>=2.1.2,<3.0.0
