--- a/admin_gateway/requirements.txt
+++ b/admin_gateway/requirements.txt
@@ -1,7 +1,10 @@
 # Admin Gateway dependencies
-fastapi>=0.109.0,<1.0.0
-uvicorn[standard]>=0.27.0,<1.0.0
-pydantic>=2.0.0,<3.0.0
+fastapi==0.115.0
+starlette==0.38.6
+uvicorn[standard]==0.30.0
+pydantic==2.9.0
+pydantic-core==2.23.2
+typing-extensions==4.15.0
 python-json-logger>=2.0.0,<3.0.0
 httpx>=0.26.0,<1.0.0
 python-jose>=3.3.0,<4.0.0
