Fix test portability and admin CI setup

--- a/.env.example
+++ b/.env.example
@@ -3,14 +3,14 @@
 
 # Database (POSTGRES_PASSWORD required - no default for security)
 POSTGRES_USER=fg_user
-POSTGRES_PASSWORD=change_me_in_production
+POSTGRES_PASSWORD=
 POSTGRES_DB=frostgate
 
 # Redis (required - no default for security)
-REDIS_PASSWORD=change_me_in_production
+REDIS_PASSWORD=
 
 # API Keys (use FG_API_KEYS_FILE in production)
-FG_API_KEY=CHANGEME
+FG_API_KEY=
 
 # Environment
 FG_ENV=dev
