--- a/pytest.ini
+++ b/pytest.ini
@@ -14,6 +14,7 @@ markers =
     contract: API/UI contract checks
     e2e_http: HTTP e2e tests against a running server
     integration: hits real running server
+    asyncio: async tests
 
 # =============================================================================
 # Filter Warnings
